<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Photo" >

    <Button
        android:id="@+id/button_take"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/take_a_pic"
        android:onClick="takePic" />
    
    <Button
        android:id="@+id/button_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_take"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/geo_tag"
        android:onClick="geoTag" />
    
    <Button
        android:id="@+id/button_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_tag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/read_geo_tag"
        android:onClick="readGeoTag" />
	
	<ScrollView
	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:layout_below="@+id/button_read" >
 	<LinearLayout
 	    android:id="@+id/ll_main"
		android:orientation="vertical"
   		android:layout_width="match_parent"
   		android:layout_height="match_parent" >
	
		<LinearLayout
		    android:id="@+id/imageFrame"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_marginTop="10dp"
		    android:padding="2dp"
		    android:background="#663399" >
		  <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:padding="2dp"
		    android:background="#ffffff"
		    android:gravity="center" >
			<ImageView
				android:id="@+id/imageView1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:contentDescription="@string/take_a_pic"
				android:src="@drawable/ic_launcher"
				android:background="#ffffff" />
		</LinearLayout>
		</LinearLayout>
	
		<LinearLayout
		    android:id="@+id/textFrame1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
	   		<TextView
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:layout_marginRight="2dp"
			    android:paddingLeft="4dp"
			    android:paddingTop="4dp"
			    android:paddingRight="4dp"
			    android:text="@string/latitude"
			    android:textColor="#663399"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
			<TextView
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:layout_marginLeft="2dp"
			    android:paddingLeft="4dp"
			    android:paddingTop="4dp"
			    android:paddingRight="4dp"
			    android:text="@string/longitude"
			    android:textColor="#663399"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
		</LinearLayout>
		
		<LinearLayout
		    android:id="@+id/textFrame2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
	   		<TextView
	   		    android:id="@+id/textView1"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:layout_marginRight="2dp"
			    android:padding="4dp"
			    android:background="@drawable/textview_border"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
			<TextView
			    android:id="@+id/textView2"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:layout_marginLeft="2dp"
			    android:padding="4dp"
			    android:background="@drawable/textview_border"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
		</LinearLayout>

	</LinearLayout>
	</ScrollView>
	
</RelativeLayout>
